variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: value stepamount
stepamount= 0
^Variables:2: error: not found: value donesteps
donesteps=0
^Variables:5: error: not found: value stepamount
  stepamount=stepamount+1
  ^Variables:8: error: not found: value stepamount
while (stepamount != donesteps){
       ^Variables:8: error: not found: value donesteps
while (stepamount != donesteps){
                     ^Variables:9: error: not found: value donesteps
  donesteps= donesteps+1
  ^