variables.Variables.scala.code
stepamount= 0
donesteps=0
while (!isOverBaggle){
  forward()
  stepamount=stepamount+1
}
isCarryingBaggle
while (stepamount != donesteps){
  donesteps= donesteps+1
  backward()
}